# Rubedo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  PROJECT_CAPABILITIES_AND_STRUCTURE.md  README.md  TODO.md  batchbrain_processors.py  mkdocs.yml  pyproject.toml  run_examples.sh  setup.py  test_db.py  test_out.txt  test_ppe.py
.cursor/: environment.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
batchbrain/: __init__.py  __main__.py  api.py  cli.py  db.py  execution.py  hashing.py  invalidation.py  ledger.py  models.py  planning.py  processor_runner.py  processor_worker.py  registry.py  runner.py  scanner.py  schemas.py  selection.py  server.py  sources.py  spec.py  store.py  util.py
bench/: bench_plan_lookup.py
benchmarks/: README.md  bench.py
docs/: PROJECT_CAPABILITIES_AND_STRUCTURE.md  TODO.md  examples.md  framework_analysis.md  getting-started.md  index.md  invariants.md  llms.txt  package-lock.json  producer-model.md  tutorial.md
docs/concepts/: model.md  partial-runs.md  run-diff.md  shapes.md  sources.md  versioning.md
docs/development/: arrow-storage.md  invariants.md  retention.md
docs/guides/: cloud-storage.md  execution-policies.md  inspecting-runs.md  retention.md  search-and-invalidation.md  trials.md
docs/notes/: PROJECT_CAPABILITIES_AND_STRUCTURE.md  TODO.md  invariants.md  producer-model.md  unification-plan.md
docs/reference/: api.md  cli.md
docs/reference/api/: gc.md  index.md  pipeline.md  selection.md  step.md
docs/src/: App.jsx  index.css
docs/src/components/: BlueprintDiagram.jsx
docs/stylesheets/: extra.css
engine/: pyproject.toml
engine/batchbrain/: __init__.py  db.py  scanner.py  server.py  store.py
examples/: README.md  cities.csv  companies.csv  count_lines.py  dag_pipeline.py  github_health.py  gutenberg_stats.py  hn_digest.py  llm_enrich.py  orders_rollup.py  scraper.py  simple_process.py  test_invalidation.py  urls.csv  weather_advisory.py
examples/count_lines/: count_lines.py
examples/count_lines/input/: c.txt  sample1.txt  sample2.txt
examples/dask_executor/: dask_executor.py
examples/executor_showdown/: .gitignore  common.py  executor_showdown.py  run_process.py  run_thread.py
examples/expand_feed/: expand_feed.py
examples/github_health/: github_health.py  repos.csv
examples/graphify/: .gitignore  graphify.py  mcp_server.py  serve.py  view.py
examples/graphify/web/: app.js  index.html  style.css
examples/gutenberg_stats/: books.csv  gutenberg_stats.py
examples/hn_digest/: hn_digest.py
examples/newsroom/: newsroom.py
examples/orders_rollup/: orders_rollup.py
examples/paper_scout/: paper_scout.py
examples/pdf_digest/: .gitignore  pdf_digest.py
examples/ray_executor/: books.csv  ray_executor.py  shor.py
examples/weather_advisory/: weather_advisory.py
marketing/: README.md  index.html  package-lock.json  package.json  vite.config.js
marketing/public/: CNAME
marketing/src/: App.jsx  index.css
marketing/src/components/: CodeBlock.jsx  DiamondDag.jsx  OuroborosLogo.jsx  Tooltip.jsx
notes/: PROJECT_CAPABILITIES_AND_STRUCTURE.md  TODO.md  arrow-storage.md  framework_analysis.md  invariants.md  llms.txt  lookup-performance.md  producer-model.md  retention.md  unification-plan.md
notes/archive/: TODO-obsolete.md
private/: demo_live.py
rubedo/: db.py  execution.py  ledger.py  models.py  planning.py  runner.py  schemas.py  server.py  sources.py  spec.py  store.py
scripts/: smoke_test.sh
src/rubedo/: __init__.py  cli.py  cloud_lane_store.py  db.py  diff.py  du.py  envcheck.py  execution.py  gc.py  hashing.py  home.py  invalidation.py  lane_store.py  ledger.py  models.py  payload_refs.py  pipeline.py  planning.py  progress.py  queries.py  render.py  runner.py  scheduler.py  schemas.py  scope.py  selection.py  server.py  sources.py  spec.py  store.py  trace.py  util.py
src/rubedo/web_static/: index.html
src/rubedo/web_static/assets/: index-CPF_6TDv.js  index-CQ1NXb6g.css
tests/: conftest.py  test_aggregate.py  test_api.py  test_arrow_aggregate.py  test_arrow_reduce.py  test_arrow_storage.py  test_batch_lookup.py  test_check_cache.py  test_cloud_lane_store.py  test_code_detection.py  test_concurrency_safety.py  test_crash_recovery.py  test_cross_pipeline_liveness.py  test_dag.py  test_data_quality.py  test_declarative.py  test_definition_snapshot.py  test_describe_ascii.py  test_du.py  test_engine.py  test_env_declarations.py  test_envcheck.py  test_expand.py  test_expand_table.py  test_external_executor.py  test_filters.py  test_fold.py  test_gc.py  test_generations.py  test_group_key.py  test_headless_root.py  test_heterogeneous_reuse.py  test_home_concurrency.py  test_home_guard.py  test_immutability.py  test_index.py  test_input_hash_usages.py  test_invalidate_downstream.py  test_join.py  test_joins.py  (+31 more)
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  index.css
web/src/components/: DagView.tsx  DataTable.tsx  JSONViewer.tsx  LiveRunCard.tsx  OuroborosLogo.tsx  RunInspector.tsx
web/src/pages/: CurrentOutputs.tsx  Dashboard.tsx  ExecutionDetail.tsx  Executions.tsx  Materializations.tsx  OutputDetail.tsx  Pipelines.tsx  Processors.tsx  RunDetail.tsx  RunDiff.tsx  Runs.tsx  SelectionBuilder.tsx
web/tests/: e2e.spec.ts  processor.spec.ts
