[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubedo"
version = "0.3.0"
description = "Content-addressed caching and run history for Python batch pipelines — built for steps you can't afford to re-run"
readme = "README.md"
authors = [
    { name = "Saurav Das" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "pipeline",
    "dag",
    "caching",
    "batch",
    "incremental",
    "llm",
    "data-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy",
    "pydantic",
    "packaging>=26.2",
    "loky>=3.5.6",
    "cloudpickle>=3.1.2",
    "rich>=13.0.0",
    "pyarrow>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/dinosaurav/Rubedo"
Repository = "https://github.com/dinosaurav/Rubedo"
Issues = "https://github.com/dinosaurav/Rubedo/issues"
Changelog = "https://github.com/dinosaurav/Rubedo/blob/main/CHANGELOG.md"

[project.scripts]
rubedo = "rubedo.cli:main"

[project.optional-dependencies]
server = ["fastapi", "uvicorn"]

# Most examples call real services (Hacker News, GitHub, Open-Meteo, an LLM via
# OpenRouter) using only the standard library. A few need a library (e.g.
# pdf_digest uses PyMuPDF); those live in the dev dependency group, so
# `uv run python examples/...` just works. LLM examples read
# OPENROUTER_API_KEY from a .env file at the repo root.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rubedo = ["web_static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fastapi",
    "httpx>=0.25.0",
    "litellm>=1.91.0",
    "mcp>=1.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=2.1.0",
    "networkx>=3.6.1",
    "pymupdf>=1.24.0",  # examples/pdf_digest: PDF text + page rasterization
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "scipy>=1.17.1",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
    "uvicorn",
    "mkdocstrings[python]>=1.0.6",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unused_configs = true

# numpy>=2.5 ships PEP 695 `type` statements in its .pyi stubs. With
# python_version = "3.11" (our requires-python floor), mypy refuses to
# parse those stubs and aborts the whole run under a 3.12+ interpreter —
# "Type statement is only supported in Python 3.12 and greater". Skip
# following into numpy (including stubs) so the type gate stays green on
# either 3.11 or 3.12 without bumping the analysis target. follow_imports_for_stubs
# is load-bearing: without it the skip does not apply to .pyi files.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true


