[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rubedo"
version = "0.4.0"
description = "Content-addressed caching and run history for Python batch pipelines — built for steps you can't afford to re-run"
readme = "README.md"
authors = [
    { name = "Saurav Das" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "pipeline",
    "dag",
    "caching",
    "batch",
    "incremental",
    "llm",
    "data-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy",
    "pydantic",
    "packaging>=26.2",
    "loky>=3.5.6",
    "cloudpickle>=3.1.2",
    "rich>=13.0.0",
    "pyarrow>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/dinosaurav/Rubedo"
Repository = "https://github.com/dinosaurav/Rubedo"
Issues = "https://github.com/dinosaurav/Rubedo/issues"
Changelog = "https://github.com/dinosaurav/Rubedo/blob/main/CHANGELOG.md"

[project.scripts]
rubedo = "rubedo.cli:main"

[project.optional-dependencies]
server = ["fastapi", "uvicorn"]
s3 = ["boto3>=1.34.0"]

# Most examples call real services (Hacker News, GitHub, Open-Meteo, an LLM via
# OpenRouter) using only the standard library. A few need a library (e.g.
# pdf_digest uses PyMuPDF, ray_executor uses Ray); those live in the dev
# dependency group, so `uv run python examples/...` just works. LLM examples
# read OPENROUTER_API_KEY from a .env file at the repo root.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rubedo = ["web_static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "boto3>=1.34.0",
    "fastapi",
    "httpx>=0.25.0",
    "litellm>=1.91.0",
    "mcp>=1.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "moto[s3]>=5.0.0",
    "mypy>=2.1.0",
    "networkx>=3.6.1",
    "pymupdf>=1.24.0",  # examples/pdf_digest: PDF text + page rasterization
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ray>=2.40.0",  # examples/ray_executor: local Ray Future-shaped pool
    "ruff>=0.15.20",
    "scipy>=1.17.1",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
    "uvicorn",
    "mkdocstrings[python]>=1.0.6",
    "psycopg[binary]>=3.3.4",
]

[tool.mypy]
# 3.12 so numpy>=2.5's PEP 695 stub syntax parses; runtime floor stays 3.11.
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unused_configs = true


